--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/css/main.css">
    
     <title>LucasDias</title>
@@ -57,10 +57,11 @@
             <br>    
             <br>
             <br>    
+            <meta meta name="viewport" content="width=device-width, user-scalable=no">
             <br>
             
-                <img height="160em" src="https://github-readme-stats.vercel.app/api?username=lucasdias87&show_icons=true&theme=dark&include_all_commits=true&count_private=true"/>
-                <img height="160em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=lucasdias87&layout=compact&langs_count=7&theme=dark"/></a>
+                <img class="img4" src="https://github-readme-stats.vercel.app/api?username=lucasdias87&show_icons=true&theme=dark&include_all_commits=true&count_private=true"/>
+                <img class="img3" src="https://github-readme-stats.vercel.app/api/top-langs/?username=lucasdias87&layout=compact&langs_count=7&theme=dark"/></a>
             
             <br>    
             <br>
