--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h3 id="contatos">contatos</h3>
         <i class=" "  onclick="window.location.href='https://api.whatsapp.com/send?phone=5513988114770'">
         <img class=" img-redes"  src="/img/whatsapp.png" alt=""></i>
-        <i class=" "  onclick="window.location.href='https://malito:lucas.dias1987@yahoo.com'">
+        <i class=" "  onclick="window.location.href='https://malito:lucas.dias1987lu@gmail.com'">
         <img class=" img-redes"  src="/img/o-email.png" alt=""></i>
         <i class=" "  onclick="window.location.href='https://www.linkedin.com/in/lucas-dias-352810162/'">
         <img class=" img-redes"  src="/img/linkedin.png" alt=""></i>
