--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="img/photo_2021-06-22_13-08-12 .png" type="imagem/x-icon">
     <meta meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/css/main.css">
    
