--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="img/photo_2021-06-22_13-08-12 .png" type="imagem/x-icon">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta meta name="viewport" content="width=device-width, user-scalable=01">
     <link rel="stylesheet" href="/css/main.css">
    
     <title>LucasDias</title>
@@ -33,7 +33,7 @@
        <br>
        <br>
          <div id="quem" class="social-media center">
-            <img class="img-foto" src="/img/photo_2021-06-22_13-08-12 .png" alt="Lucas Dias">
+            <img class="img-foto" src="/img/photo_redes.png" alt="Lucas Dias">
             <h1>Lucas Dias</h1>
             <h2 >Desenvolvedor front-end</h2>
             <h3>Tec em Informatica, Desenvolvedor front-end Web | Mobile ( java / Html / Css / Bootstrap / Javascript / Gimp )
