--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="img/photo_2021-06-22_13-08-12 .png" type="imagem/x-icon">
-    <meta meta name="viewport" content="width=device-width, user-scalable=1">
+    <meta meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/css/main.css">
    
     <title>LucasDias</title>
