--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             
             <br>
             
-                <img class="img4" src="https://github-readme-stats.vercel.app/api?username=lucasdias87&show_icons=true&theme=dark&include_all_commits=true&count_private=true"/>
-                <img class="img3" src="https://github-readme-stats.vercel.app/api/top-langs/?username=lucasdias87&layout=compact&langs_count=7&theme=dark"/></a>
+                <img class="img4" src="https://github-readme-stats.vercel.app/api?username=lucasdias87&show_icons=true&theme=shades-of-purple&include_all_commits=true&count_private=true"/>
+                <img class="img3" src="https://github-readme-stats.vercel.app/api/top-langs/?username=lucasdias87&layout=compact&langs_count=7&theme=shades-of-purple"/></a>
             <br>    
             <br>
           </div>
