--- a/index.html
+++ b/index.html
@@ -83,9 +83,16 @@
                 <br>
                 <a href="https://github.com/lucasdias87/Tempo-e-Temperatura-com-openweather ">
                  <img class="img2" src="/img/simplescreenrecorder-2022-03-22_00.11.00.gif" alt="jogo-da-velha"/></a>
-               <br>
+               <br>-
+               <h4>IMC ÍNDICE DE MASSA CORPORAL
+                 usando Html CSS e Javascript</h4>
+                 <img src="https://img.shields.io/github/license/lucasdias87/Site-IMC-?style=for-the-badge)](https://github.com/lucasdias87/Site-IMC-/blob/main/LICENSE" alt="Licença">
+                 <br>
+                 <a href="https://github.com/lucasdias87/Site-IMC ">
+                  <img class="img2" src="/img/simplescreenrecorder-2022-04-03_16.25.14.gif" alt="Calculadora"/></a>
+                  <br>
                <h4>Calculadora Web
-                Calculadora usando Html CSS e Javascript</h4>
+                usando Html CSS e Javascript</h4>
                  <img src="https://img.shields.io/github/license/lucasdias87/calculadora-web?style=for-the-badge" alt="Licença">
                  <br>
                  <a href="https://github.com/lucasdias87/calculadora-web ">
