--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                <br>-
                <h4>IMC ÍNDICE DE MASSA CORPORAL
                  usando Html CSS e Javascript</h4>
-                 <img src="https://img.shields.io/github/license/lucasdias87/Site-IMC-?style=for-the-badge)](https://github.com/lucasdias87/Site-IMC-/blob/main/LICENSE" alt="Licença">
-                 <br>
+                 <img src="https://img.shields.io/github/license/lucasdias87/Site-IMC-?style=for-the-badge" alt="Licença">
+                    <br>
                  <a href="https://github.com/lucasdias87/Site-IMC ">
                   <img class="img2" src="/img/simplescreenrecorder-2022-04-03_16.25.14.gif" alt="Calculadora"/></a>
                   <br>
