--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
        
         <div class="center" >
               
-            <h3 id="contatos ">contatos</h3>
+            <h3 >contatos</h3>
             <form action="https://formsubmit.co/lucas.dias1987lu@gmail.com"method="POST">
                 <input type="text" name="name" placeholder="Nome" required>
                 <input type="email" name="email" placeholder="Email" required>
@@ -144,7 +144,7 @@
                <button id="submit-form">Enviar</button>
                <button type="reset" >Limpar</button>
             </form>
-            <br>
+            <br id="contatos">
         <i class=" "  onclick="window.location.href='https://api.whatsapp.com/send?phone=5513988114770'">
         <img class=" img-redes"  src="/img/whatsapp.png" alt=""></i>
         <i class=" "  onclick="window.location.href='https://malito:lucas.dias1987lu@gmail.com'">
