--- a/index.html
+++ b/index.html
@@ -135,12 +135,14 @@
               
             <h3 >contatos</h3>
             <form action="https://formsubmit.co/lucas.dias1987lu@gmail.com"method="POST">
-                <input type="text" name="name" placeholder="Nome" required>
+                <input type="text" name="name" placeholder="Nome ou Empresa" required>
                 <input type="email" name="email" placeholder="Email" required>
+                <input type="telephone" name="telephone" placeholder="Telefone" required>
                 <input type="text" name="subject" placeholder="Assunto" required>
                 <textarea name="message" placeholder="Mensagem" required></textarea>
                 <br>
                 <input type="hidden" name="_next" value="https://lucasdias.netlify.app/thanks.html">
+                <br>
                <button id="submit-form">Enviar</button>
                <button type="reset" >Limpar</button>
             </form>
