--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <form action="https://formsubmit.co/lucas.dias1987lu@gmail.com"method="POST">
                 <input type="text" name="name" placeholder="Nome ou Empresa" required>
                 <input type="email" name="email" placeholder="Email" required>
-                <input type="telephone" name="telephone" placeholder="Telefone" required>
+                <input type="number" name="telephone" placeholder="Telefone" required>
                 <input type="text" name="subject" placeholder="Assunto" required>
                 <textarea name="message" placeholder="Mensagem" required></textarea>
                 <br>
