--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             
           </div>
             
-          <div class="projetos">
+          <div class="projetos" id="projetos">
             <br>    
             <br>
             <br>  
