--- a/index.html
+++ b/index.html
@@ -186,6 +186,6 @@
         <img id="menu" src="img/expand_less_FILL0_wght400_GRAD0_opsz48.png"  onclick="window.location.href='#top'">
       </footer>
    
-  
+  <a rel="me" href="https://veganism.social/@LucasDias87">Mastodon</a>
 
 </html>
