--- a/index.html
+++ b/index.html
@@ -1,51 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="BR">
+    <head>
+        <meta charset="UTF-8" />
+        <script
+            src="https://platform.linkedin.com/badges/js/profile.js"
+            async
+            defer
+            type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+               <script type="text/javascript" src="cssanimation-gsap.js"></script>
+        <link rel="shortcut icon"href="img/photo_2021-06-22_13-08-12 .png"type="imagem/x-icon"/>
+        <meta
+            meta
+            name="viewport"
+            content="width=device-width, user-scalable=1.0"
+        />
+        <script src="js/script.js" defer></script>
+        <link rel="stylesheet" href="css/main.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-  <link rel="shortcut icon" href="img/photo_2021-06-22_13-08-12 .png" type="imagem/x-icon">
-  <meta meta name="viewport" content="width=device-width, user-scalable=1.0">
-  <script src="js/script.js" defer></script>
-  <link rel="stylesheet" href="css/main.css">
- 
-  <title>Lucas Dias</title>
-  <nav class="nav">
-    <img src="img/logo-código.svg" alt="code" class="logo">
-    <ul class="nav-list">
-      <li><a href="#projetos">Projetos</a></li>
-    </ul>
-  </nav>
+        <title>Lucas Dias</title>
+        <nav class="nav">
+            <img src="img/logo-código.svg" alt="code" class="logo" />
+            <ul class="nav-list">
+                <li><a href="#projetos">Projetos</a></li>
+            </ul>
+        </nav>
+    </head>
 
-
-</head>
-
-
-<div class=" center" >
-            <img class="img-foto  " src="img/photo_2024-08-13_20-48-15.png" alt="Lucas Dias">
-            <h1 class="typewriter ">Sou desenvolvedor web frontend</h1>
-            <h2>
-              Olá, sou o <strong>Lucas Dias</strong>. Sou um desenvolvedor front-end com formação em <strong>Técnico em Informática</strong> e <strong>Sistemas para Internet</strong>, além de experiência em <strong>Java</strong>, <strong>HTML/CSS</strong>, <strong>Bootstrap</strong>, e <strong>JavaScript</strong>. Com habilidades em <strong>GIMP</strong> para design gráfico, crio interfaces web responsivas e aplicativos móveis impactantes.<br><br>
-              Atualmente, sou <strong>administrador da @SociedadePinguim</strong>, liderando projetos e explorando soluções inovadoras. Estou sempre pronto para enfrentar novos desafios e transformar ideias em soluções digitais eficientes.<br><br>
-              Vamos conversar sobre como posso contribuir para o seu próximo projeto!
-          </h2>
-          </div>
-
-<div id="projetos">
-
-</div>
-
+    <div class="center">
+        <img
+            class="img-foto"
+            src="img/photo_2024-08-13_20-48-15.png"
+            alt="Lucas Dias"
+        />
 
 
 
+         <h1 class="cssanimation leJoltZoom sequence"> Sou desenvolvedor web frontend </h1>
 
 
 
+        <h2>
+            Olá, sou o <strong>Lucas Dias</strong>. Sou um desenvolvedor
+            front-end com formação em <strong>Técnico em Informática</strong> e
+            <strong>Sistemas para Internet</strong>, além de experiência em
+            <strong>Java</strong>, <strong>HTML/CSS</strong>,
+            <strong>Bootstrap</strong>, e <strong>JavaScript</strong>. Com
+            habilidades em <strong>GIMP</strong> para design gráfico, crio
+            interfaces web responsivas e aplicativos móveis impactantes.<br /><br />
+            Atualmente, sou <strong>administrador da @SociedadePinguim</strong>,
+            liderando projetos e explorando soluções inovadoras. Estou sempre
+            pronto para enfrentar novos desafios e transformar ideias em
+            soluções digitais eficientes.<br /><br />
+            Vamos conversar sobre como posso contribuir para o seu próximo
+            projeto!
+        </h2>
+    </div>
 
 
-
-
-
-
-
+    <h1 class="center" >Projetos</h1>
+    <div id="projetos" class="container center">
+       
+        <div class="card">
+            <img src="img/pokedex.gif" alt="Imagem 1" />
+            <p>Texto para a primeira janela</p>
+        </div>
+        <div class="card">
+            <img src="img/simplescreenrecorder-2022-03-22_00.11.00.gif" alt="Imagem 2" />
+            <p>Texto para a segunda janela</p>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/150" alt="Imagem 3" />
+            <p>Texto para a terceira janela</p>
+        </div>
+    </div>
+    <a rel="me" href="https://bolha.us/@LucasDias">Mastodon</a>
 </html>
