--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-         <h1 class="cssanimation leElevateRight sequence"> Sou desenvolvedor web frontend </h1>
+         <h1 class="cssanimation leElevateRight sequence"> Sou desenvolvedor web </h1>
 
 
 
@@ -97,7 +97,7 @@
     </div>
    
     <footer class="contatos center ">
-        <h1 class="center">Contatos</h1>
+      
         <a rel="me" href="https://github.com/lucasdias87">
         <img src="img/icons8-github.svg">
         <a rel="me" href="https://bolha.us/@LucasDias">
